@@ -1,7 +1,5 @@
 ext {
     dockerImage='openjdk:21-slim'
-    serviceJvmOpts='--enable-preview -ea ${wmsa_jvm_param} -Dservice-host=0.0.0.0  -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=4000 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false'
-    serviceToolOpts='--enable-preview -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5000'
 }
 
 tasks.register('dockerFile') {
@@ -18,9 +16,6 @@ FROM ${dockerImage}
 
 ADD ${application.applicationName}.tar /
 RUN mkdir /wmsa
-
-ENV JAVA_TOOL_OPTIONS="${serviceToolOpts}"
-ENV JAVA_OPTS="${serviceJvmOpts} "
 
 ENTRYPOINT WMSA_HOME=/wmsa /${application.applicationName}/bin/${application.applicationName} \${arg0} \${arg1}
 """
