@@ -5,7 +5,8 @@ set -e
 EXPERIMENT=$1
 SAMPLE_NAME=crawl-${2:-m}
 ARGS=${@:3}
-SAMPLE_DIR="samples/${SAMPLE_NAME}/"
+export EXPERIMENT_RUNNER_OPTS="--enable-preview"
+SAMPLE_DIR="node-1/samples/${SAMPLE_NAME}/"
 
 echo "args = $ARGS"
 
@@ -70,6 +71,6 @@ export PATH
 
 export JAVA_OPTS
 
-experiment-runner ${SAMPLE_DIR}/plan.yaml ${EXPERIMENT} ${ARGS}
+experiment-runner ${SAMPLE_DIR} ${EXPERIMENT} ${ARGS}
 
 popd
